Summary statistics table

--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Mouse ID</th>\n      <th>Drug Regimen</th>\n      <th>Sex</th>\n      <th>Age_months</th>\n      <th>Weight (g)</th>\n      <th>Timepoint</th>\n      <th>Tumor Volume (mm3)</th>\n      <th>Metastatic Sites</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>k403</td>\n      <td>Ramicane</td>\n      <td>Male</td>\n      <td>21</td>\n      <td>16</td>\n      <td>0</td>\n      <td>45.000000</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>k403</td>\n      <td>Ramicane</td>\n      <td>Male</td>\n      <td>21</td>\n      <td>16</td>\n      <td>5</td>\n      <td>38.825898</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>2</td>\n      <td>k403</td>\n      <td>Ramicane</td>\n      <td>Male</td>\n      <td>21</td>\n      <td>16</td>\n      <td>10</td>\n      <td>35.014271</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <td>3</td>\n      <td>k403</td>\n      <td>Ramicane</td>\n      <td>Male</td>\n      <td>21</td>\n      <td>16</td>\n      <td>15</td>\n      <td>34.223992</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <td>4</td>\n      <td>k403</td>\n      <td>Ramicane</td>\n      <td>Male</td>\n      <td>21</td>\n      <td>16</td>\n      <td>20</td>\n      <td>32.997729</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
       "text/plain": "  Mouse ID Drug Regimen   Sex  Age_months  Weight (g)  Timepoint  \\\n0     k403     Ramicane  Male          21          16          0   \n1     k403     Ramicane  Male          21          16          5   \n2     k403     Ramicane  Male          21          16         10   \n3     k403     Ramicane  Male          21          16         15   \n4     k403     Ramicane  Male          21          16         20   \n\n   Tumor Volume (mm3)  Metastatic Sites  \n0           45.000000                 0  \n1           38.825898                 0  \n2           35.014271                 1  \n3           34.223992                 1  \n4           32.997729                 1  "
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,6 +38,7 @@
     "# Dependencies and Setup\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
+    "import numpy as np \n",
     "import scipy.stats as st\n",
     "\n",
     "# Study data files\n",
@@ -62,22 +63,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Age_months</th>\n      <th>Weight (g)</th>\n      <th>Timepoint</th>\n      <th>Tumor Volume (mm3)</th>\n      <th>Metastatic Sites</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>count</td>\n      <td>1893.000000</td>\n      <td>1893.000000</td>\n      <td>1893.000000</td>\n      <td>1893.000000</td>\n      <td>1893.000000</td>\n    </tr>\n    <tr>\n      <td>mean</td>\n      <td>12.814580</td>\n      <td>25.662441</td>\n      <td>19.572108</td>\n      <td>50.448381</td>\n      <td>1.021659</td>\n    </tr>\n    <tr>\n      <td>std</td>\n      <td>7.189592</td>\n      <td>3.921622</td>\n      <td>14.079460</td>\n      <td>8.894722</td>\n      <td>1.137974</td>\n    </tr>\n    <tr>\n      <td>min</td>\n      <td>1.000000</td>\n      <td>15.000000</td>\n      <td>0.000000</td>\n      <td>22.050126</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>25%</td>\n      <td>7.000000</td>\n      <td>25.000000</td>\n      <td>5.000000</td>\n      <td>45.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>50%</td>\n      <td>13.000000</td>\n      <td>27.000000</td>\n      <td>20.000000</td>\n      <td>48.951474</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <td>75%</td>\n      <td>20.000000</td>\n      <td>29.000000</td>\n      <td>30.000000</td>\n      <td>56.292200</td>\n      <td>2.000000</td>\n    </tr>\n    <tr>\n      <td>max</td>\n      <td>24.000000</td>\n      <td>30.000000</td>\n      <td>45.000000</td>\n      <td>78.567014</td>\n      <td>4.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "text/plain": "        Age_months   Weight (g)    Timepoint  Tumor Volume (mm3)  \\\ncount  1893.000000  1893.000000  1893.000000         1893.000000   \nmean     12.814580    25.662441    19.572108           50.448381   \nstd       7.189592     3.921622    14.079460            8.894722   \nmin       1.000000    15.000000     0.000000           22.050126   \n25%       7.000000    25.000000     5.000000           45.000000   \n50%      13.000000    27.000000    20.000000           48.951474   \n75%      20.000000    29.000000    30.000000           56.292200   \nmax      24.000000    30.000000    45.000000           78.567014   \n\n       Metastatic Sites  \ncount       1893.000000  \nmean           1.021659  \nstd            1.137974  \nmin            0.000000  \n25%            0.000000  \n50%            1.000000  \n75%            2.000000  \nmax            4.000000  "
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Mean</th>\n      <th>Median</th>\n      <th>Variance</th>\n      <th>Standar Deviation</th>\n      <th>Standar Error</th>\n    </tr>\n    <tr>\n      <th>Drug Regimen</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>Capomulin</td>\n      <td>40.68</td>\n      <td>41.56</td>\n      <td>24.95</td>\n      <td>4.99</td>\n      <td>0.33</td>\n    </tr>\n    <tr>\n      <td>Ceftamin</td>\n      <td>52.59</td>\n      <td>51.78</td>\n      <td>39.29</td>\n      <td>6.27</td>\n      <td>0.47</td>\n    </tr>\n    <tr>\n      <td>Infubinol</td>\n      <td>52.88</td>\n      <td>51.82</td>\n      <td>43.13</td>\n      <td>6.57</td>\n      <td>0.49</td>\n    </tr>\n    <tr>\n      <td>Ketapril</td>\n      <td>55.24</td>\n      <td>53.70</td>\n      <td>68.55</td>\n      <td>8.28</td>\n      <td>0.60</td>\n    </tr>\n    <tr>\n      <td>Naftisol</td>\n      <td>54.33</td>\n      <td>52.51</td>\n      <td>66.17</td>\n      <td>8.13</td>\n      <td>0.60</td>\n    </tr>\n    <tr>\n      <td>Placebo</td>\n      <td>54.03</td>\n      <td>52.29</td>\n      <td>61.17</td>\n      <td>7.82</td>\n      <td>0.58</td>\n    </tr>\n    <tr>\n      <td>Propriva</td>\n      <td>52.32</td>\n      <td>50.85</td>\n      <td>42.35</td>\n      <td>6.51</td>\n      <td>0.51</td>\n    </tr>\n    <tr>\n      <td>Ramicane</td>\n      <td>40.22</td>\n      <td>40.67</td>\n      <td>23.49</td>\n      <td>4.85</td>\n      <td>0.32</td>\n    </tr>\n    <tr>\n      <td>Stelasyn</td>\n      <td>54.23</td>\n      <td>52.43</td>\n      <td>59.45</td>\n      <td>7.71</td>\n      <td>0.57</td>\n    </tr>\n    <tr>\n      <td>Zoniferol</td>\n      <td>53.24</td>\n      <td>51.82</td>\n      <td>48.53</td>\n      <td>6.97</td>\n      <td>0.52</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "               Mean  Median  Variance  Standar Deviation  Standar Error\nDrug Regimen                                                           \nCapomulin     40.68   41.56     24.95               4.99           0.33\nCeftamin      52.59   51.78     39.29               6.27           0.47\nInfubinol     52.88   51.82     43.13               6.57           0.49\nKetapril      55.24   53.70     68.55               8.28           0.60\nNaftisol      54.33   52.51     66.17               8.13           0.60\nPlacebo       54.03   52.29     61.17               7.82           0.58\nPropriva      52.32   50.85     42.35               6.51           0.51\nRamicane      40.22   40.67     23.49               4.85           0.32\nStelasyn      54.23   52.43     59.45               7.71           0.57\nZoniferol     53.24   51.82     48.53               6.97           0.52"
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
-    "mouse_results.describe()"
+    "mouse_byreg = mouse_results.groupby('Drug Regimen')\n",
+    "tumor_column = mouse_byreg['Tumor Volume (mm3)']\n",
+    "tumor_mean = tumor_column.mean()\n",
+    "tumor_median = tumor_column.median()\n",
+    "tumor_var = tumor_column.var()\n",
+    "tumor_std = tumor_column.std()\n",
+    "tumor_sem = tumor_column.sem()\n",
+    "\n",
+    "# Summary table\n",
+    "summary_table = pd.DataFrame({'Mean':tumor_mean,'Median':tumor_median,'Variance':tumor_var,'Standar Deviation':tumor_std,'Standar Error':tumor_sem})\n",
+    "summary_table = summary_table.round(2)\n",
+    "summary_table"
    ]
   },
   {
