bar plots completed

--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -88,7 +88,11 @@
     "\n",
     "# Summary table\n",
     "summary_table = pd.DataFrame({'Mean':tumor_mean,'Median':tumor_median,'Variance':tumor_var,'Standar Deviation':tumor_std,'Standar Error':tumor_sem})\n",
+    "\n",
+    "# Format table\n",
     "summary_table = summary_table.round(2)\n",
+    "\n",
+    "# Print\n",
     "summary_table"
    ]
   },
@@ -200,13 +204,6 @@
    "source": [
     "# Calculate the correlation coefficient and linear regression model for mouse weight and average tumor volume for the Capomulin regimen"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
