Correct values for IQR per treatment

--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -131,7 +131,7 @@
     }
    ],
    "source": [
-    "# Generate a bar plot showing number of data points for each treatment regimen using pandas count values de la tabla principal\n",
+    "# Generate a bar plot showing number of data points for each treatment regimen using pandas\n",
     "mouse_byreg_unique = mouse_byreg.nunique()\n",
     "mouse_byreg_unique_df = pd.DataFrame(mouse_byreg_unique['Tumor Volume (mm3)']).sort_values(by=['Tumor Volume (mm3)'],ascending=False)\n",
     "mouse_byreg_unique_df.plot(kind='bar',title='Data points per Treatment Regimen',color='purple',width=.8)\n",
@@ -199,7 +199,7 @@
     }
    ],
    "source": [
-    "# Generate a pie plot showing the distribution of female versus male mice using pandas agregar porcentaje\n",
+    "# Generate a pie plot showing the distribution of female versus male mice using pandas\n",
     "mouse_sex = pd.DataFrame(mouse_results['Sex'].value_counts())\n",
     "mouse_sex.plot(kind='pie',y='Sex',title='Distribution of female versus male mice',autopct=\"%1.1f%%\")\n",
     "plt.show()"
@@ -250,22 +250,61 @@
     }
    ],
    "source": [
-    "# Calculate the final tumor volume of each mouse across four of the most promising treatment regimens. Calculate the IQR and quantitatively determine if there are any potential outliers. Dividirlo por cada droga\n",
-    "treatment_regiments = mouse_results[(mouse_results['Drug Regimen']=='Capomulin') | (mouse_results['Drug Regimen']=='Ramicane') | (mouse_results['Drug Regimen']=='Infubinol') | (mouse_results['Drug Regimen']=='Ceftamin')]\n",
-    "quartiles = treatment_regiments['Tumor Volume (mm3)'].quantile([.25,.5,.75])\n",
-    "lowerq = quartiles[0.25]\n",
-    "upperq = quartiles[0.75]\n",
-    "iqr = upperq-lowerq\n",
+    "# Calculate the final tumor volume of each mouse across four of the most promising treatment regimens. Calculate the IQR and quantitatively determine if there are any potential outliers.\n",
     "\n",
-    "lower_bound = lowerq - (1.5*iqr)\n",
-    "upper_bound = upperq + (1.5*iqr)\n",
+    "# Capomulin\n",
+    "treatment_capo = mouse_results[(mouse_results['Drug Regimen']=='Capomulin'\n",
     "\n",
+    "quartiles_capo = treatment_capo['Tumor Volume (mm3)'].quantile([.25,.5,.75])\n",
+    "lowerq_capo = quartiles_capo[0.25]\n",
+    "upperq_capo = quartiles_capo[0.75]\n",
+    "iqr_capo = upperq_capo-lowerq_capo\n",
     "\n",
-    "print(f'Values below {round(lower_bound,2)} could be outliers.'')\n",
-    "print(f'Values above {round(upper_bound,2)} could be outliers.')\n",
+    "lower_bound_capo = lowerq_capo - (1.5*iqr_capo)\n",
+    "upper_bound_capo = upperq_capo + (1.5*iqr_capo)\n",
+    "\n",
+    "outlier_volumes_capo = treatment_capo.loc[(treatment_capo['Tumor Volume (mm3)'] < lower_bound_capo) | (treatment_capo['Tumor Volume (mm3)'] > upper_bound_capo)]\n",
+    "\n",
+    "# Ramicane\n",
+    "treatment_rami = mouse_results['Drug Regimen']=='Ramicane'\n",
+    "\n",
+    "quartiles_rami = treatment_rami['Tumor Volume (mm3)'].quantile([.25,.5,.75])\n",
+    "lowerq_rami = quartiles_rami[0.25]\n",
+    "upperq_rami = quartiles_rami[0.75]\n",
+    "iqr_rami = upperq_rami-lowerq_rami\n",
+    "\n",
+    "lower_bound_rami = lowerq_rami - (1.5*iqr_rami)\n",
+    "upper_bound_rami = upperq_rami + (1.5*iqr_rami)\n",
+    "\n",
+    "outlier_volumes_rami = treatment_rami.loc[(treatment_rami['Tumor Volume (mm3)'] < lower_bound_rami) | (treatment_rami['Tumor Volume (mm3)'] > upper_bound_rami)]\n",
+    "\n",
+    "# Infubinol\n",
+    "treatment_infu = mouse_results['Drug Regimen']=='Infubinol'\n",
+    "\n",
+    "quartiles_infu = treatment_infu['Tumor Volume (mm3)'].quantile([.25,.5,.75])\n",
+    "lowerq_infu = quartiles_infu[0.25]\n",
+    "upperq_infu = quartiles_infu[0.75]\n",
+    "iqr_infu = upperq_infu-lowerq_infu\n",
+    "\n",
+    "lower_bound_infu = lowerq_infu - (1.5*iqr_infu)\n",
+    "upper_bound_infu = upperq_infu + (1.5*iqr_infu)\n",
+    "\n",
+    "# Ceftamin\n",
+    "treatment_ceft = mouse_results['Drug Regimen']=='Ceftamin'\n",
+    "\n",
+    "quartiles_ceft = treatment_ceft['Tumor Volume (mm3)'].quantile([.25,.5,.75])\n",
+    "lowerq_ceft = quartiles_ceft[0.25]\n",
+    "upperq_ceft = quartiles_ceft[0.75]\n",
+    "iqr_ceft = upperq_ceft-lowerq_ceft\n",
+    "\n",
+    "lower_bound_ceft = lowerq_ceft - (1.5*iqr_ceft)\n",
+    "upper_bound_ceft = upperq_ceft + (1.5*iqr_ceft)\n",
+    "\n",
+    "# print(f'Values below {round(lower_bound,2)} could be outliers.'')\n",
+    "# print(f'Values above {round(upper_bound,2)} could be outliers.')\n",
     "\n",
     "outlier_volumes = treatment_regiments.loc[(treatment_regiments['Tumor Volume (mm3)'] < lower_bound) | (treatment_regiments['Tumor Volume (mm3)'] > upper_bound)]\n",
-    "print(f'There could be are {len(outlier_volumes)} outliers, base on the IQR information above')\n"
+    "# print(f'There could be are {len(outlier_volumes)} outliers, base on the IQR information above')\n"
    ]
   },
   {
